# TakeRubles

./: README.md  pyproject.toml
src/api/: serializers.py  urls.py  views.py
src/config/: settings.py  urls.py
src/library_app/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/library_app/migrations/: 0001_initial.py  0002_initial.py
src/templates/: base.html
src/templates/core/: 403.html  500.html
src/templates/includes/: book.html  debtor.html  error.html  footer.html  form.html  head.html  header.html  my_book.html
src/templates/users/: login.html  signup.html
src/users/: admin.py  forms.py  models.py  urls.py
src/users/migrations/: 0001_initial.py
